Fix #c2o-244:  Catalog folder text entry field is too small to show any text
Fix #c2o-246:  Inconsistencies in layout of lists in HTML catalog

--- a/OpdsOutput/src/main/resources/com/gmail/dpierron/calibre/opds/desktop.css
+++ b/OpdsOutput/src/main/resources/com/gmail/dpierron/calibre/opds/desktop.css
@@ -151,7 +151,7 @@ width: 100%;
 	margin:5px 10px 5px 10px
 }
 .x_menulisting .details {
-	float:left;
+	float:none;
 	/*width:300px;*/
 }
 
